--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ input[type="checkbox"] {
         width: 100%;
         top: 100px;
         left: 0;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
     }
 
     .menu ul {
@@ -116,6 +119,35 @@ input[type="checkbox"] {
 
     #menu-toggle:checked~.menu {
         display: flex;
+    }
+
+    .bottom {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .bottom-left,
+    .bottom-right {
+        width: 250px;
+        margin-bottom: 20px;
+    }
+
+    .bottom-left {
+        margin-left: 30px;
+    }
+
+    .img-head {
+        width: 25%;
+        margin-left: 20px;
+    }
+
+    .language-options {
+        display: flex;
+        margin-top: 10px;
+    }
+
+    .typewriter {
+        font-size: small;
     }
 }
 
@@ -269,6 +301,10 @@ input[type="checkbox"] {
     right: 0;
     font-size: 30px;
     color: #38a5d4;
+}
+
+    {
+    position: relative;
 }
 
 .bottom-right .medical-icon {
